--- a/site/config.toml
+++ b/site/config.toml
@@ -8,4 +8,8 @@ title = "RAAR"
     identifier = "obi"
     url = "/obi/"
 
+
+# RSS, categories and tags disabled for an easy start
+# See configuration options for more details: 
+# https://gohugo.io/getting-started/configuration/#toml-configuration
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
