--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "autoprefixer": "^7.1.3",
     "cssnano": "^3.10.0",
+    "gulp-cache": "^0.4.6",
     "gulp-imagemin": "^3.3.0"
   }
 }
