--- a/package.json
+++ b/package.json
@@ -29,16 +29,20 @@
     "eslint-plugin-import": "^1.11.1",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.11.1",
+    "glslify": "^7.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-postcss": "^6.1.1",
     "gulp-util": "^3.0.7",
-    "hugo-bin": "^0.30.0",
+    "html-webpack-plugin": "^3.2.0",
+    "hugo-bin": "^0.41.0",
     "imports-loader": "^0.7.1",
     "normalize.css": "^7.0.0",
     "p5": "^0.5.14",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^10.0.0",
+    "regl": "^1.3.11",
+    "three": "^0.99.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.6.0",
     "whatwg-fetch": "^1.0.0"
